<resources>
    <string name="app_name" translatable="false">Weather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feelLike">Feels like</string>
    <string name="three_hour_details" />
    <string name="three_hour">Three Hour Details</string>
    <string name="lang">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="def_ault">Default</string>
    <string name="temp">Temperature</string>
    <string name="c">Celsius</string>
    <string name="k">Kelvin</string>
    <string name="f">Fahrenheit</string>
    <string name="wind">Wind</string>
    <string name="metric">m/sec</string>
    <string name="imperial">mile/hour</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="gps">Gps</string>
    <string name="degreeC">°C</string>
    <string name="degreef">°F</string>
    <string name="degreek">°K</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="dayforcast">5-Day Forecast</string>
    <string name="locselection">Select Location</string>
    <string name="remove_favorite_place_button">Remove favorite place button</string>
    <string name="alert_configuration">set alert Configuration</string>
    <string name="set_duration">Set Duration</string>
    <string name="set_date">Set Date</string>
    <string name="notify_me">Notify me by</string>
    <string name="alerm">Alerm</string>
    <string name="notification">Notification</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="favscreen">Favorite Locations</string>
    <string name="alarmlocation">Location:</string>
    <string name="alarmtime">Time:</string>
    <string name="alarmdate">Date:</string>
    <string name="notificationtype">Notification Type:</string>

</resources>