<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".setting_screen.SettingFragment">

        <TextView
            android:id="@+id/languga"
            android:layout_width="103dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/lang"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/LangRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languga">

            <RadioButton
                android:id="@+id/radioArabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/def_ault"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>


        <TextView
            android:id="@+id/tempView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/temp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/languga"
            app:layout_constraintTop_toBottomOf="@+id/LangRadioGroup" />

        <RadioGroup
            android:id="@+id/tempRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tempView">

            <RadioButton
                android:id="@+id/radioCelesius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioKelvin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radiofahr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/windView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/wind"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tempView"
            app:layout_constraintTop_toBottomOf="@+id/tempRadioGroup" />

        <RadioGroup
            android:id="@+id/windRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tempRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/windView">

            <RadioButton
                android:id="@+id/radiometeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/metric"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content">

            </Space>

            <RadioButton
                android:id="@+id/radioImp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imperial"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/locView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/windView"
            app:layout_constraintTop_toBottomOf="@+id/windRadioGroup" />

        <RadioGroup
            android:id="@+id/locRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/windRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/locView">

            <RadioButton
                android:id="@+id/radioGps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gps"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Space
                android:layout_width="55dp"
                android:layout_height="wrap_content">

            </Space>

            <RadioButton
                android:id="@+id/radioMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>