<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/alert_configuration"
        android:textColor="@android:color/white" />

    <!-- Set Duration -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_duration" />

    <Button
        android:id="@+id/start_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textAlignment="center"
        tools:ignore="RtlCompat" />

    <!-- End Duration -->

    <!-- Notification Options -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_me" />

    <RadioGroup
        android:id="@+id/notify_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/alarm_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alerm" />

        <RadioButton
            android:id="@+id/notification_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notification" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Location" />

    <!-- Location Radio Group -->
    <RadioGroup
        android:id="@+id/locationRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Location" />

        <RadioButton
            android:id="@+id/choose_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Location" />
    </RadioGroup>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/save" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
